--- a/card.html
+++ b/card.html
@@ -9,20 +9,18 @@
 	<div class = "container">
 		<h3> Chu </h3>
 		<img src="Chu1.JPG" alt="Chu">
-		<div = "container2">
-			<p><em> He is the king of my family! </em></p>
+		<div class = "container2">
+			<p><em> He thinks he is the king of the world! In fact he is just a little cutie. :) </em></p>
 			<ul>
 				<li><span>Age</span>: 1</li>
 				<li><span>Favorite toy</span>: Monkey doll</li>
 				<li><span>Weight</span>: 10 pounds</li>
 				<li><span>Habit</span>: Biting</li>
 			</ul>
-			<p> He is such a cutie! Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-				Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				Excepteur sint occaecat cupidatat non proident,
-				sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</p>
 		</div>
 	</div>
 </body>
