added reviewed files

--- a/card.html
+++ b/card.html
@@ -6,18 +6,18 @@
 	<title>Animal Trading Cards</title>
 </head>
 <body>
-	<div class = "container">
-		<h3> Chu </h3>
-		<img src="Chu1.JPG" alt="Chu">
-		<div class = "container2">
+	<div class = "outer_container">
+		<h3 class="puppy_name"> Chu </h3>
+		<img class="puppy_pic" src="Chu1.JPG" alt="Chu">
+		<div class = "inner_container">
 			<p><em> He thinks he is the king of the world! In fact he is just a little cutie. :) </em></p>
 			<ul>
-				<li><span>Age</span>: 1</li>
-				<li><span>Favorite toy</span>: Monkey doll</li>
-				<li><span>Weight</span>: 10 pounds</li>
-				<li><span>Habit</span>: Biting</li>
+				<li><span class="fact_label">Age</span>: 1</li>
+				<li><span class="fact_label">Favorite toy</span>: Monkey doll</li>
+				<li><span class="fact_label">Weight</span>: 10 pounds</li>
+				<li><span class="fact_label">Habit</span>: Biting</li>
 			</ul>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+			<p class="interesting_fact_text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 			</p>
