--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
 		<img class="puppy_pic" src="Chu1.JPG" alt="Chu">
 		<div class = "inner_container">
 			<p><em> He thinks he is the king of the world! In fact he is just a little cutie. :) </em></p>
-			<ul>
+			<ul class="list_about_puppy">
 				<li><span class="fact_label">Age</span>: 1</li>
 				<li><span class="fact_label">Favorite toy</span>: Monkey doll</li>
 				<li><span class="fact_label">Weight</span>: 10 pounds</li>
